# claude-kanban

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  webhook-tmux-plan.md
.github/workflows/: ci.yml
app/: config.py  main.py
app/domain/: webhook_rules.py
app/infra/: github_client.py  sqlite_store.py  tmux_runner.py
app/worker/: queue_worker.py
skills/claude-kanban/: SKILL.md
tests/: conftest.py  test_healthz.py  test_idempotency_sqlite.py  test_signature_and_filters.py  test_webhook_endpoint.py  test_worker_flow.py
